GTN_Crd_Domo_CSharp/GTN_Crd_Domo_CSharp/config.cs


			[DllImport("gts.dll")]
			public static extern short GT_SetDiConfig(short diType,short diIndex,ref TDiConfig pDi);
			[DllImport("gts.dll")]
			public static extern short GT_GetDiConfig(short diType,short diIndex,out TDiConfig pDi);
			[DllImport("gts.dll")]
			public static extern short GT_SetDoConfig(short doType,short doIndex,ref TDoConfig pDo);
			[DllImport("gts.dll")]
			public static extern short GT_GetDoConfig(short doType,short doIndex,out TDoConfig pDo);
			[DllImport("gts.dll")]
			public static extern short GT_SetStepConfig(short step,ref TStepConfig pStep);
			[DllImport("gts.dll")]
			public static extern short GT_GetStepConfig(short step,out TStepConfig pStep);
			[DllImport("gts.dll")]
			public static extern short GT_SetDacConfig(short dac,ref TDacConfig pDac);
			[DllImport("gts.dll")]
			public static extern short GT_GetDacConfig(short dac,out TDacConfig pDac);
			[DllImport("gts.dll")]
			public static extern short GT_SetCountConfig(short countType,short countIndex,ref TCountConfig pCount);
			[DllImport("gts.dll")]
			public static extern short GT_GetCountConfig(short countType,short countIndex,out TCountConfig pCount);
			[DllImport("gts.dll")]
			public static extern short GT_SetControlConfig(short control,ref TControlConfig pControl);
			[DllImport("gts.dll")]
			public static extern short GT_GetControlConfig(short control,out TControlConfig pControl);
			[DllImport("gts.dll")]
			public static extern short GT_SetProfileConfig(short profile,ref TProfileConfig pProfile);
			[DllImport("gts.dll")]
			public static extern short GT_GetProfileConfig(short profile,out TProfileConfig pProfile);
			[DllImport("gts.dll")]
			public static extern short GT_SetAxisConfig(short axis,ref TAxisConfig pAxis);
			[DllImport("gts.dll")]
			public static extern short GT_GetAxisConfig(short axis,out TAxisConfig pAxis);
			[DllImport("gts.dll")]
			public static extern short GT_GetConfigTable(short type,out short pCount);
			[DllImport("gts.dll")]
			public static extern short GT_GetConfigTableAll();
			[DllImport("gts.dll")]
			public static extern short GT_SetMcConfig(ref TMcConfig pMc);
			[DllImport("gts.dll")]
			public static extern short GT_GetMcConfig(out TMcConfig pMc);
			[DllImport("gts.dll")]
			public static extern short GT_SetMcConfigToFile(ref TMcConfig pMc,ref char pFile);
			[DllImport("gts.dll")]
			public static extern short GT_GetMcConfigFromFile(out TMcConfig pMc,out char pFile);
			[DllImport("gts.dll")]
			public static extern short GT_SaveConfig(out char pFile);
			[DllImport("gts.dll")]
			public static extern short GT_GetInterruptTime(out double pServoRunTime,out double pProfileRunTime);
			[DllImport("gts.dll")]
			public static extern short GT_GetInterruptTimeMax(out double pServoRunTimeMax,out double pProfileRunTimeMax);
			
			//////////////////////////////////////////////////////////////////////////
			//New Watch
			//////////////////////////////////////////////////////////////////////////
			public const short  WATCH_MODE_STATIC = 0;
            public const short WATCH_MODE_LOOP = 1;
            public const short WATCH_MODE_DYNAMIC = 2;

            public const short WATCH_MODE_STATIC_BACKGROUND = 10;
            public const short WATCH_MODE_LOOP_BACKGROUND = 11;
            public const short WATCH_MODE_DYNAMIC_BACKGROUND = 12;

            public const short WATCH_EVENT_RUN = 1;
            public const short WATCH_EVENT_START = 10;
            public const short WATCH_EVENT_STOP = 20;
            public const short WATCH_EVENT_OFF = 30;

            public const short WATCH_CONDITION_EQ = 1;
            public const short WATCH_CONDITION_NE = 2;
            public const short WATCH_CONDITION_GE = 3;
            public const short WATCH_CONDITION_LE = 4;

            public const short WATCH_CONDITION_CHANGE_TO = 11;
            public const short WATCH_CONDITION_CHANGE = 12;
            public const short WATCH_CONDITION_UP = 13;
            public const short WATCH_CONDITION_DOWN = 14;

            public const short WATCH_CONDITION_REMAIN_AT = 21;
            public const short WATCH_CONDITION_REMAIN = 22;

            public const long WATCH_VAR_CLOCK = 1200;
            public const long WATCH_VAR_PRF_LOOP = 1201;

            public const long WATCH_VAR_COMMAND_CODE = 1220;
            public const long WATCH_VAR_COMMAND_DATA = 1221;
            public const long WATCH_VAR_COMMAND_COUNT = 1222;
            public const long WATCH_VAR_COMMAND_READ_FLAG = 1223;

            public const long WATCH_VAR_PRF_POS = 6000;
            public const long WATCH_VAR_PRF_VEL = 6001;
            public const long WATCH_VAR_PRF_ACC = 6002;

            public const long WATCH_VAR_PRF_RUN = 6200;

            public const long WATCH_VAR_CRD_PRF_POS = 8000;
            public const long WATCH_VAR_CRD_PRF_VEL = 8001;
            public const long WATCH_VAR_CRD_PRF_ACC = 8002;

            public const long WATCH_VAR_CRD_RUN = 8200;

            public const long WATCH_VAR_CRD_SEGMENT_NUMBER = 8202;
            public const long WATCH_VAR_CRD_SEGMENT_NUMBER_USER = 8203;
            public const long WATCH_VAR_CRD_COMMAND_RECEIVE = 8204;
            public const long WATCH_VAR_CRD_COMMAND_EXECUTE = 8205;
            
            public const long WATCH_VAR_CRD_FOLLOW_SLAVE_POS = 8600;
            public const long WATCH_VAR_CRD_FOLLOW_SLAVE_VEL = 8601;
            
            public const long WATCH_VAR_CRD_FOLLOW_STAGE = 8610;

            public const long WATCH_VAR_SCAN_PRF_POS = 18000;
            public const long WATCH_VAR_SCAN_PRF_VEL = 18001;
            public const long WATCH_VAR_SCAN_PRF_ACC = 18002;

            public const long WATCH_VAR_SCAN_PRF_POS_X = 18010;
            public const long WATCH_VAR_SCAN_PRF_POS_Y = 18020;

            public const long WATCH_VAR_SCAN_RUN = 18200;

            public const long WATCH_VAR_SCAN_SEGMENT_NUMBER = 18202;


            public const long WATCH_VAR_LASER_HSIO = 18600;
            public const long WATCH_VAR_LASER_POWER = 18601;

            public const long WATCH_VAR_AXIS_PRF_POS = 20000;
            public const long WATCH_VAR_AXIS_PRF_VEL = 20001;
            public const long WATCH_VAR_AXIS_PRF_ACC = 20002;
            public const long WATCH_VAR_AXIS_ENC_POS = 20003;

            public const long WATCH_VAR_AXIS_PRF_VEL_FILTER = 20011;

            public const long WATCH_VAR_ENC_POS = 30000;

            public const long WATCH_VAR_ENC_VEL = 30001;

            public const long WATCH_VAR_GPI = 31000;

            public const long WATCH_VAR_GPO = 32000;

            public const long WATCH_VAR_AI = 33000;

            public const long WATCH_VAR_AO = 34000;

            public const long WATCH_VAR_AUTO_FOCUS_OUT = 34006;

            public const long WATCH_VAR_TRIGGER_EXECUTE = 38000;
            public const long WATCH_VAR_TRIGGER_STATUS = 38001;
            public const long WATCH_VAR_TRIGGER_POSITION = 38002;
            public const long WATCH_VAR_TRIGGER_COUNT = 38010;

            public const long WATCH_VAR_POS_LOOP_ERROR = 40000;

            public const long WATCH_VAR_CONTROL_REF_VEL = 41000;

            public const long WATCH_VAR_WATCH_TIME = 52001;
			
						public const long WATCH_VAR_INT32 = 52020;
						public const long WATCH_VAR_INT64 = 52021;
						public const long WATCH_VAR_FLOAT = 52022;
						public const long WATCH_VAR_DOUBLE = 52023;
						public const long WATCH_VAR_BOOL = 52024;
			
			
			public struct  TWatchVar
			{
                public ushort type;
                public ushort index;
                public ushort id;
			}
			
			public struct  TWatchEvent
			{
                public ushort type;
                public ushort loop;
                public ushort watchCount;
                public TWatchVar var;
                public ushort condition;
                public double value;
			}
			
			[DllImport("gts.dll")]
			public static extern short GT_ClearWatch(short mode);
			[DllImport("gts.dll")]
			public static extern short GT_AddWatchVar(ref TWatchVar pVar);
			[DllImport("gts.dll")]
			public static extern short GT_AddWatchEvent(ref TWatchEvent pEvent);
			[DllImport("gts.dll")]
			public static extern short GT_WatchOn(short interval,short mode,ushort count);
			[DllImport("gts.dll")]
			public static extern short GT_WatchOff();
			[DllImport("gts.dll")]
			public static extern short GT_PrintWatch(out char pFileName,long start,uint printCount);
			[DllImport("gts.dll")]
			public static extern short GT_GetMcVar(out TWatchVar pVar,out double pValue);
			[DllImport("gts.dll")]
			public static extern short GT_SetWatchGroup(short group);
			[DllImport("gts.dll")]
			public static extern short GT_GetWatchGroup(out short pGroup);
			[DllImport("gts.dll")]
			public static extern short GT_LoadWatchConfig(ref  char pFile);
			[DllImport("gts.dll")]
			public static extern short GT_SaveWatchConfig(short group,out char pFile);
			[DllImport("gts.dll")]
			public static extern short GT_ReadWatch(short varIndex,out double pBuffer,uint bufferSize,out uint pReadCount);
			
			public struct TWatchInfo
			{
                public short enable;						// 采集使能
                public short run;							// 采集状态
                public uint time;					// 采集次数
                public uint head;					// 头指针
                public uint threshold;			// 最多容纳采集次数

                public short interval;						// 采集间隔
                public short mode;							// 采集模式
                public ushort countBeforeEvent;	// 事件触发之前的采集数量
                public ushort countAfterEvent;		// 事件触发以后的采集数量
                public ushort varCount;			// 采集变量数量
                public ushort eventCount;			// 采集事件数量
			}
			
			public struct TWatchVarInfo
			{
                public uint pAddress;
                public ushort length;
                public short fraction;
                public ushort format;
                public ushort hex;
                public ushort sign;
                public ushort bit;
			}
			
			public struct TWatchFormat 
			{
                public short width;
                public short precision;
                public char seperator;
                public short hex;
			}
			
			[DllImport("gts.dll")]
			public static extern short  GT_GetWatchInfo(out TWatchInfo pInfo);
			[DllImport("gts.dll")]
			public static extern short  GT_GetWatchVar(short index,out TWatchVar pVar,out TWatchVarInfo pVarInfo);
			[DllImport("gts.dll")]
			public static extern short  GT_GetWatchEvent(short index,out TWatchEvent pEvent);
			[DllImport("gts.dll")]
			public static extern short  GT_SetWatchFormat(ref TWatchFormat pFormat);
			[DllImport("gts.dll")]
			public static extern short  GT_GetWatchFormat(out TWatchFormat pFormat);

			//Event and Task
			public const long TASK_SET_DO_BIT = 0x1101;
			public const long TASK_CRD_START = 0x4004;
			public const long TASK_CRD_STOP = 0x4005;
			public const long TASK_CRD_OVERRIDE = 0x4006;
			
			public struct TTaskSetDoBit 
			{
                public short doType;
                public short doIndex;
                public short doValue;
                public short mode;
                public long parameter1;
                public long parameter2;
                public long parameter3;
                public long parameter4;
                public long parameter5;
                public long parameter6;
                public long parameter7;
                public long parameter8;
			}
			
			public struct TTaskCrdStart 
			{
                public short mask;
                public short option;
			}
			
			public struct TTaskCrdStop 
			{
                public short mask;
                public short option;
			}
			
			public struct TTaskCrdOverride 
			{
                public short crd;
                public double synVelOverride;
			}
